# open-source-legislation

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  SCRAPER_REFACTORING_WORKFLOW.md  SCRAPER_STANDARDIZATION_GUIDE.md  debug_delays.py  pyproject.toml  requirements.txt  validationProcess.md
sql/: debug_functions.sql
src/scrapers/us/(states)/az/statutes/: REFACTORING_PROGRESS.md  scrapeAZ.py  scrapeAZ_standardized.py
src/scrapers/us/(states)/ct/statutes/: REFACTORING_PROGRESS.md
src/scrapers/us/(states)/de/statutes/: REFACTORING_PROGRESS.md  scrapeDE_standardized.py
src/scrapers/us/(states)/id/statutes/: REFACTORING_PROGRESS.md  scrapeID_standardized.py
src/utils/: scrapingHelpers.py  utilityFunctions.py
src/utils/base/: __init__.py  config.py  credentials.py  scraper.py
src/utils/data/: __init__.py  factories.py
src/utils/processing/: __init__.py  database.py  text.py  web.py
